// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multi-Currency enabled currencies list add currencies task renders correctly: snapshot-multi-currency-onboarding 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-50 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-50 {
    transition-duration: 0ms;
  }
}

<div>
  <li
    class="wcpay-wizard-task add-currencies-task is-active"
  >
    <div
      class="wcpay-wizard-task__top-border"
    />
    <div
      class="wcpay-wizard-task__headline"
      tabindex="-1"
    >
      <div
        class="wcpay-wizard-task__icon-wrapper"
      >
        <div
          class="wcpay-wizard-task__icon-text"
        >
          1
        </div>
        <svg
          aria-hidden="true"
          class="wcpay-wizard-task__icon-checkmark"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
      </div>
      <span
        class="wcpay-wizard-task__title"
      >
        Add currencies
      </span>
    </div>
    <div
      class="wcpay-wizard-task__body"
    >
      <div
        class="task-collapsible-body is-active"
      >
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          Add currencies so international customers can shop and pay in their local currency. Your store's default currency is 
          <strong>
            United States (US) dollar ($ USD)
          </strong>
          .
        </p>
        <div
          class="components-surface components-card add-currencies-task__currency-selector-wrapper emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Card"
        >
          <div
            class="emotion-2 emotion-1"
          >
            <div
              class="components-card__body components-card-body emotion-4 emotion-1"
              data-wp-c16t="true"
              data-wp-component="CardBody"
            >
              <div
                class="add-currencies-task__search"
              >
                <div
                  class="search"
                >
                  <svg
                    aria-hidden="true"
                    class="search__icon"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z"
                    />
                  </svg>
                  <input
                    class="components-text-control__input"
                    placeholder="Search currencies"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="add-currencies-task__separator"
              />
              
              <div
                class="add-currencies-task__content"
              >
                <ul>
                  <li>
                    <h4>
                      Recommended currencies
                    </h4>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="EUR"
                            id="inspector-checkbox-control-0"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-0"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇪🇺
                          </span>
                           
                          <span>
                            Euro
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            €
                             EUR
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="JPY"
                            id="inspector-checkbox-control-1"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-1"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇯🇵
                          </span>
                           
                          <span>
                            Japanese yen
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            ¥
                             JPY
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="GBP"
                            id="inspector-checkbox-control-2"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-2"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇬🇧
                          </span>
                           
                          <span>
                            Pound sterling
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            £
                             GBP
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="AUD"
                            id="inspector-checkbox-control-3"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-3"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇦🇺
                          </span>
                           
                          <span>
                            Australian dollar
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            $
                             AUD
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="CAD"
                            id="inspector-checkbox-control-4"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-4"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇨🇦
                          </span>
                           
                          <span>
                            Canadian dollar
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            $
                             CAD
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                    data-testid="recommended-currency"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="INR"
                            id="inspector-checkbox-control-5"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-5"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇮🇳
                          </span>
                           
                          <span>
                            Indian rupee
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            ₹
                             INR
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="add-currencies-task__separator"
                  />
                  <li
                    class="add-currencies-task__available-currencies"
                  >
                    <h4>
                      All currencies
                    </h4>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="AED"
                            id="inspector-checkbox-control-6"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-6"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇦🇪
                          </span>
                           
                          <span>
                            United Arab Emirates dirham
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            د.إ
                             AED
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="CDF"
                            id="inspector-checkbox-control-7"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-7"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇨🇩
                          </span>
                           
                          <span>
                            Congolese franc
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            Fr
                             CDF
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="DKK"
                            id="inspector-checkbox-control-8"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-8"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇩🇰
                          </span>
                           
                          <span>
                            Danish krone
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            DKK
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="BIF"
                            id="inspector-checkbox-control-9"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-9"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇧🇮
                          </span>
                           
                          <span>
                            Burundian franc
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            Fr
                             BIF
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="CLP"
                            id="inspector-checkbox-control-10"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-10"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇨🇱
                          </span>
                           
                          <span>
                            Chilean peso
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            $
                             CLP
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="components-elevation emotion-50 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
          <div
            aria-hidden="true"
            class="components-elevation emotion-50 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
        </div>
        <button
          class="components-button is-primary"
          type="button"
        >
          Add 6 currencies
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Multi-Currency enabled currencies list currency search works with currency code: snapshot-currency-search-by-code 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <li
    class="wcpay-wizard-task add-currencies-task is-active"
  >
    <div
      class="wcpay-wizard-task__top-border"
    />
    <div
      class="wcpay-wizard-task__headline"
      tabindex="-1"
    >
      <div
        class="wcpay-wizard-task__icon-wrapper"
      >
        <div
          class="wcpay-wizard-task__icon-text"
        >
          1
        </div>
        <svg
          aria-hidden="true"
          class="wcpay-wizard-task__icon-checkmark"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
      </div>
      <span
        class="wcpay-wizard-task__title"
      >
        Add currencies
      </span>
    </div>
    <div
      class="wcpay-wizard-task__body"
    >
      <div
        class="task-collapsible-body is-active"
      >
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          Add currencies so international customers can shop and pay in their local currency. Your store's default currency is 
          <strong>
            United States (US) dollar ($ USD)
          </strong>
          .
        </p>
        <div
          class="components-surface components-card add-currencies-task__currency-selector-wrapper emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Card"
        >
          <div
            class="emotion-2 emotion-1"
          >
            <div
              class="components-card__body components-card-body emotion-4 emotion-1"
              data-wp-c16t="true"
              data-wp-component="CardBody"
            >
              <div
                class="add-currencies-task__search"
              >
                <div
                  class="search"
                >
                  <svg
                    aria-hidden="true"
                    class="search__icon"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z"
                    />
                  </svg>
                  <input
                    class="components-text-control__input"
                    placeholder="Search currencies"
                    type="text"
                    value="DKK"
                  />
                </div>
              </div>
              <div
                class="add-currencies-task__separator"
              />
              <h4>
                Search results (1 currencies)
              </h4>
              <div
                class="add-currencies-task__content"
              >
                <ul>
                  
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="DKK"
                            id="inspector-checkbox-control-52"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-52"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇩🇰
                          </span>
                           
                          <span>
                            Danish krone
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            DKK
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
        </div>
        <button
          class="components-button is-primary"
          type="button"
        >
          Add 6 currencies
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Multi-Currency enabled currencies list currency search works with currency name: snapshot-currency-search-by-name 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <li
    class="wcpay-wizard-task add-currencies-task is-active"
  >
    <div
      class="wcpay-wizard-task__top-border"
    />
    <div
      class="wcpay-wizard-task__headline"
      tabindex="-1"
    >
      <div
        class="wcpay-wizard-task__icon-wrapper"
      >
        <div
          class="wcpay-wizard-task__icon-text"
        >
          1
        </div>
        <svg
          aria-hidden="true"
          class="wcpay-wizard-task__icon-checkmark"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
      </div>
      <span
        class="wcpay-wizard-task__title"
      >
        Add currencies
      </span>
    </div>
    <div
      class="wcpay-wizard-task__body"
    >
      <div
        class="task-collapsible-body is-active"
      >
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          Add currencies so international customers can shop and pay in their local currency. Your store's default currency is 
          <strong>
            United States (US) dollar ($ USD)
          </strong>
          .
        </p>
        <div
          class="components-surface components-card add-currencies-task__currency-selector-wrapper emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Card"
        >
          <div
            class="emotion-2 emotion-1"
          >
            <div
              class="components-card__body components-card-body emotion-4 emotion-1"
              data-wp-c16t="true"
              data-wp-component="CardBody"
            >
              <div
                class="add-currencies-task__search"
              >
                <div
                  class="search"
                >
                  <svg
                    aria-hidden="true"
                    class="search__icon"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z"
                    />
                  </svg>
                  <input
                    class="components-text-control__input"
                    placeholder="Search currencies"
                    type="text"
                    value="Danish krone"
                  />
                </div>
              </div>
              <div
                class="add-currencies-task__separator"
              />
              <h4>
                Search results (1 currencies)
              </h4>
              <div
                class="add-currencies-task__content"
              >
                <ul>
                  
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            class="components-checkbox-control__input"
                            code="DKK"
                            id="inspector-checkbox-control-41"
                            type="checkbox"
                            value="1"
                          />
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-41"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇩🇰
                          </span>
                           
                          <span>
                            Danish krone
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            DKK
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
        </div>
        <button
          class="components-button is-primary"
          type="button"
        >
          Add 6 currencies
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Multi-Currency enabled currencies list currency search works with currency symbol: snapshot-currency-search-by-symbol 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-8 {
  margin-bottom: calc(4px * 2);
}

.components-panel__row .emotion-8 {
  margin-bottom: inherit;
}

.emotion-10 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-10 {
    transition-duration: 0ms;
  }
}

<div>
  <li
    class="wcpay-wizard-task add-currencies-task is-active"
  >
    <div
      class="wcpay-wizard-task__top-border"
    />
    <div
      class="wcpay-wizard-task__headline"
      tabindex="-1"
    >
      <div
        class="wcpay-wizard-task__icon-wrapper"
      >
        <div
          class="wcpay-wizard-task__icon-text"
        >
          1
        </div>
        <svg
          aria-hidden="true"
          class="wcpay-wizard-task__icon-checkmark"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
      </div>
      <span
        class="wcpay-wizard-task__title"
      >
        Add currencies
      </span>
    </div>
    <div
      class="wcpay-wizard-task__body"
    >
      <div
        class="task-collapsible-body is-active"
      >
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          Add currencies so international customers can shop and pay in their local currency. Your store's default currency is 
          <strong>
            United States (US) dollar ($ USD)
          </strong>
          .
        </p>
        <div
          class="components-surface components-card add-currencies-task__currency-selector-wrapper emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Card"
        >
          <div
            class="emotion-2 emotion-1"
          >
            <div
              class="components-card__body components-card-body emotion-4 emotion-1"
              data-wp-c16t="true"
              data-wp-component="CardBody"
            >
              <div
                class="add-currencies-task__search"
              >
                <div
                  class="search"
                >
                  <svg
                    aria-hidden="true"
                    class="search__icon"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z"
                    />
                  </svg>
                  <input
                    class="components-text-control__input"
                    placeholder="Search currencies"
                    type="text"
                    value="€"
                  />
                </div>
              </div>
              <div
                class="add-currencies-task__separator"
              />
              <h4>
                Search results (1 currencies)
              </h4>
              <div
                class="add-currencies-task__content"
              >
                <ul>
                  
                  <li
                    class="enabled-currency-checkbox"
                  >
                    <div
                      class="components-base-control components-checkbox-control emotion-6 emotion-7"
                    >
                      <div
                        class="components-base-control__field emotion-8 emotion-9"
                      >
                        <span
                          class="components-checkbox-control__input-container"
                        >
                          <input
                            checked=""
                            class="components-checkbox-control__input"
                            code="EUR"
                            id="inspector-checkbox-control-66"
                            type="checkbox"
                            value="1"
                          />
                          <svg
                            aria-hidden="true"
                            class="components-checkbox-control__checked"
                            focusable="false"
                            height="24"
                            role="presentation"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
                            />
                          </svg>
                        </span>
                        <label
                          class="components-checkbox-control__label"
                          for="inspector-checkbox-control-66"
                        >
                          <span
                            class="enabled-currency-checkbox__flag"
                          >
                            🇪🇺
                          </span>
                           
                          <span>
                            Euro
                          </span>
                           
                          <span
                            class="enabled-currency-checkbox__code"
                          >
                            (
                            €
                             EUR
                            )
                          </span>
                        </label>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
          <div
            aria-hidden="true"
            class="components-elevation emotion-10 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
        </div>
        <button
          class="components-button is-primary"
          type="button"
        >
          Add 6 currencies
        </button>
      </div>
    </div>
  </li>
</div>
`;

exports[`Multi-Currency enabled currencies list should hide recommended currencies section, if all recommended currencies are enabled: snapshot-all-currencies-selected 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0 ,0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-6 {
    transition-duration: 0ms;
  }
}

<div>
  <li
    class="wcpay-wizard-task add-currencies-task is-active"
  >
    <div
      class="wcpay-wizard-task__top-border"
    />
    <div
      class="wcpay-wizard-task__headline"
      tabindex="-1"
    >
      <div
        class="wcpay-wizard-task__icon-wrapper"
      >
        <div
          class="wcpay-wizard-task__icon-text"
        >
          1
        </div>
        <svg
          aria-hidden="true"
          class="wcpay-wizard-task__icon-checkmark"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
      </div>
      <span
        class="wcpay-wizard-task__title"
      >
        Add currencies
      </span>
    </div>
    <div
      class="wcpay-wizard-task__body"
    >
      <div
        class="task-collapsible-body is-active"
      >
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          Add currencies so international customers can shop and pay in their local currency. Your store's default currency is 
          <strong>
            United States (US) dollar ($ USD)
          </strong>
          .
        </p>
        <p
          class="wcpay-wizard-task__description-element is-muted-color"
        >
          You've already added 
          <strong>
            Canadian dollar ($ CAD), Pound sterling (£ GBP), Euro (€ EUR), United Arab Emirates dirham (د.إ AED), Congolese franc (Fr CDF), Australian dollar ($ AUD), Japanese yen (¥ JPY), Indian rupee (₹ INR), Danish krone (DKK), Burundian franc (Fr BIF), and Chilean peso ($ CLP)
          </strong>
           to your store.
        </p>
        <div
          class="components-surface components-card add-currencies-task__currency-selector-wrapper emotion-0 emotion-1"
          data-wp-c16t="true"
          data-wp-component="Card"
        >
          <div
            class="emotion-2 emotion-1"
          >
            <div
              class="components-card__body components-card-body emotion-4 emotion-1"
              data-wp-c16t="true"
              data-wp-component="CardBody"
            >
              <div
                class="add-currencies-task__search"
              >
                <div
                  class="search"
                >
                  <svg
                    aria-hidden="true"
                    class="search__icon"
                    focusable="false"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 5c-3.3 0-6 2.7-6 6 0 1.4.5 2.7 1.3 3.7l-3.8 3.8 1.1 1.1 3.8-3.8c1 .8 2.3 1.3 3.7 1.3 3.3 0 6-2.7 6-6S16.3 5 13 5zm0 10.5c-2.5 0-4.5-2-4.5-4.5s2-4.5 4.5-4.5 4.5 2 4.5 4.5-2 4.5-4.5 4.5z"
                    />
                  </svg>
                  <input
                    class="components-text-control__input"
                    placeholder="Search currencies"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="add-currencies-task__separator"
              />
              
              <div
                class="add-currencies-task__content"
              >
                <ul>
                  
                  <li
                    class="add-currencies-task__available-currencies"
                  >
                    <h4>
                      All currencies
                    </h4>
                  </li>
                </ul>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="components-elevation emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
          <div
            aria-hidden="true"
            class="components-elevation emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Elevation"
          />
        </div>
        <button
          class="components-button is-primary"
          type="button"
        >
          Continue
        </button>
      </div>
    </div>
  </li>
</div>
`;
